feat: add bulk send batch flows
